# shell-genie

./: Dockerfile  LICENSE  README.md  pyproject.toml
dockerfiles/: debian.Dockerfile
shell_genie/: backends.py  main.py  utils.py
tests/: test_debian.py  test_mac.py
